--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ li:hover span.delete-item {
 
 .error {
   color: red;
+  margin-bottom: 20px;
+}
+
+.success {
+  color: green;
+  margin-bottom: 20px;
 }
 
 .Footer a {
